Optimize performance and bundle size
- Refactor Lucide icon imports to reduce bundle size
- Update Netlify configuration with proper headers for compression
- Add cache headers for static assets
- Improve UI contrast and accessibility
- Fix layout issues and improve responsive design
- Optimize loading performance

--- a/netlify.toml
+++ b/netlify.toml
@@ -9,3 +9,13 @@
 
 [build.environment]
   NODE_VERSION = "20"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Content-Encoding = "br, gzip"
+
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
